# mu

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  buf  buffer_overlay.cpp  buffer_overlay.hpp  buffer_overlay_test.cpp  build.py  build.sh  conanfile.txt  conn_config.hpp  consts.hpp  ctrl_block.cpp  ctrl_block.hpp  default.supp  format.sh  hrd.hpp  hrd_conn.cpp  hrd_util.cpp  main  main.cpp  neb.cpp  neb.hpp  store_conn.cpp  store_conn.hpp  util.cpp  util.hpp
.circleci/: config.yml
.github/workflows/: clang-format-test.yml
conan-profiles/: clang-release.profile  gcc-release.profile
conan/exports/compiler-options/: compileroptions.py  conanfile.py
conan/profiles/: clang-debug.profile  clang-minsizerel.profile  clang-release.profile  clang-relwithdebinfo.profile  gcc-debug.profile  gcc-minsizerel.profile  gcc-release.profile  gcc-relwithdebinfo.profile
conn/: README.md  conanfile.py
conn/src/: CMakeLists.txt  exchanger.cpp  exchanger.hpp  rc.cpp  rc.hpp  wr-builder.hpp  wr_builder.hpp
consensus-fastpath/: CMakeLists.txt  conanfile.txt  main.cpp
crash-consensus/: CMakeLists.txt  README.md  branching.hpp  conanfile.py  conanfile.txt  config.hpp  consensus.cpp  consensus.hpp  context.hpp  contexted-poller.hpp  export.sh  fixed-size-majority.hpp  follower.hpp  leader-switch.hpp  log.hpp  logger.hpp  main.cpp  memory.cpp  memory.hpp  message-identifier.hpp  quorum-waiter.cpp  quorum-waiter.hpp  remote-log-reader.hpp  response-tracker.hpp  slow-path.hpp
crash-consensus-demo/: CMakeLists.txt  main.cpp  timers.h
crash-consensus/demo/: CMakeLists.txt  README.md  build.sh  main-dt.cpp  main-st-lat.cpp  main-st.cpp  main.cpp  profile.sh  stats.cpp
crash-consensus/demo/src/: CMakeLists.txt  barrier.hpp  fifo.cpp  helpers.hpp  main-dt.cpp  main-st-lat.cpp  main-st.cpp  stats.cpp
crash-consensus/demo/using_conan_deps/: CMakeLists.txt  conanfile.py
crash-consensus/demo/using_conan_fully/: CMakeLists.txt  build.sh  conanfile.py
crash-consensus/demo/without_conan/: CMakeLists.txt  build.sh
crash-consensus/experiments/: build.sh  compile.sh  deploy_common.sh  deploy_local_stop.sh  deploy_remote.sh  deploy_sigusr1.sh  memcached_gather.sh  redis_gather.sh  reset_registry.sh  timers.h
crash-consensus/experiments/deploy/: deploy_common.sh  deploy_local.sh  generate_exports.py
crash-consensus/experiments/liquibook/: .gitignore  build.sh  package_orig_liquibook.sh  step1.patch  step2.patch  step3.patch  step4.patch
crash-consensus/experiments/memcached/: .gitignore  README.md  memcached-1.5.19.patch
crash-consensus/experiments/memcached/latency_test/: CMakeLists.txt  memcached_latency_gets.c  memcached_latency_puts.c  memcached_latency_puts_gets.c
crash-consensus/experiments/redis/: .gitignore  README.md  redis-2.8.17.patch  redis-2.8.24.patch
crash-consensus/experiments/redis/latency_test/: CMakeLists.txt  redis_latency_gets.c  redis_latency_puts.c  redis_latency_puts_gets.c
crash-consensus/libgen/: conanfile.py  export.sh
crash-consensus/libgen/src/: CMakeLists.txt  main.cpp
crash-consensus/log/: log-config.hpp  log-constants.hpp  log-helpers.hpp  log-iterators.cpp  log-iterators.hpp
crash-consensus/shared-lib/: CMakeLists.txt  README.md  build.sh  conanfile.py  main.cpp
crash-consensus/src/: CMakeLists.txt  config.hpp  consensus.cpp  consensus.hpp  context.hpp  contexted-poller.cpp  contexted-poller.hpp  crash-consensus-c-wrapper.cpp  crash-consensus.cpp  crash-consensus.h  crash-consensus.hpp  error.hpp  fifo.cpp  fixed-size-majority.hpp  follower.hpp  leader-switch.hpp  log-recycling.hpp  memory.cpp  memory.hpp  message-identifier.hpp  pinning.cpp  pinning.hpp  quorum-waiter.cpp  quorum-waiter.hpp  remote-log-reader.hpp  response-tracker.cpp  slow-path.hpp
crash-consensus/src/log/: log-constants.hpp  log-helpers.hpp  log-iterators.hpp  log.cpp  log.hpp
crypto/: .gitignore  README.md  conanfile.py
crypto/lib/ed25519-dalek-ffi/: Cargo.toml  Makefile
crypto/lib/ed25519-dalek-ffi/.cargo/: config
crypto/lib/ed25519-dalek-ffi/src/: lib.rs
crypto/src/: CMakeLists.txt  sign.cpp  sign.hpp
crypto/src/sign/: dalek.cpp  dalek.hpp  sodium.cpp  sodium.hpp
ctrl/: README.md  conanfile.py
ctrl/src/: CMakeLists.txt  ae_handler.hpp  block.cpp  block.hpp  device.cpp  device.hpp
demo/: build.sh  conanfile.py
demo/src/: CMakeLists.txt  main.cpp
leader-election/: CMakeLists.txt  README.md  conanfile.txt  failure-detector.cpp  failure-detector.hpp  main.cpp
memstore/: README.md  conanfile.py
memstore/src/: CMakeLists.txt  store.cpp  store.hpp
neb/: .gitignore  CMakeLists.txt  README.md  buffer_overlay.cpp  buffer_overlay.hpp  buffer_overlay_test.cpp  build-executable.sh  build.sh  conanfile.py  conanfile.txt  conn_config.hpp  consts.hpp  ctrl_block.cpp  ctrl_block.hpp  main.cpp  message_tracker.hpp  neb.cpp  neb.hpp  store_conn.cpp  store_conn.hpp  util.cpp  util.hpp
neb/scripts/: README.md  analyze.py  bench.sh  plot.py  shared.sh  validate.py
neb/src/: CMakeLists.txt  async.cpp  async.hpp  broadcastable.hpp  buffer_overlay.cpp  buffer_overlay.hpp  consts.hpp  main.cpp  remotes.hpp  slot-tracker.hpp  sync.cpp  sync.hpp  thread-pool.hpp
neb/src/async/: broadcast.cpp  broadcast.hpp  buffer_overlay.cpp  buffer_overlay.hpp  consts.hpp  main.cpp  mem-pool.hpp  remotes.hpp  swmr.hpp
neb/src/shared/: consts.hpp  helpers.hpp  log-strings.hpp  mem-slot.hpp  remotes.hpp  slot-tracker.hpp  thread-pool.hpp  types.hpp
neb/src/sync/: broadcast.cpp  broadcast.hpp  buffer_overlay.cpp  buffer_overlay.hpp  consts.hpp  main.cpp  mem-pool.hpp  mem-slot.hpp  remotes.hpp  sync-pseudocode.MD
neb/test/: CMakeLists.txt  README.md  build.sh  conanfile.py  main.cpp
neb/test/async/: swmr-test.hpp
neb/test/shared/: slot-tracker-test.hpp
shared/: README.md  conanfile.py
shared/src/: CMakeLists.txt  bench.hpp  logger.cpp  logger.hpp  pinning.hpp  pointer-wrapper.hpp  units.hpp  unused-suppressor.hpp
test/bench/crypto/: CMakeLists.txt  conanfile.txt  main.cpp
test/integration/crypto/: CMakeLists.txt  build.sh  main.cpp
